# ForecastAGLT

./: CLAUDE.md  Dockerfile  Dockerfile_mac  Dockerfile_mac_amd64  Dockerfile_mac_fixed  Portfolio_optimization.py  README.md  config.py  experiment_runner_for_best_models.py  experiment_runner_for_portfolio.py  gmdh-1.0.3-cp311-cp311-macosx_15_0_arm64.whl  gmdh-1.0.3-cp39-cp39-macosx_15_0_universal2.whl  logging_config.py  pyproject.toml  requirements.txt  requirements_without_gmdh.txt  sidebar_portfolio.py  test.py  test_portfolio_optimization.py
.devcontainer/: devcontainer.json
models/: __init__.py  experiment_core.py
pages/: 1_Model_optimization.py
pages/utils/: utils.py
