[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chronos-forecasting",
    "gmdh==1.0.3",
    "matplotlib==3.10.8",
    "pmdarima==2.1.1",
    "requests==2.31.0",
    "scipy>=1.13.0",
    "streamlit==1.31.0",
    "tensorflow==2.16.1",
    "tqdm==4.66.1",
    "yfinance==0.2.61",
]

[tool.uv.sources]
chronos-forecasting = { git = "https://github.com/amazon-science/chronos-forecasting.git", rev = "main" }
